--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,31 @@ nav {
   display: flex;
   justify-content: space-between;
 }
+.toggle-button {
+  display: none;
+}
+.toggle-button .bar {
+  height: 3px;
+  width: 100%;
+  background-color: rgb(255 0 0);
+  border-radius: 2px;
+}
+@media only screen and (max-width: 800px) {
+  .toggle-button {
+    position: absolute;
+    right: 30px;
+    top: 30px;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 25px;
+    width: 30px;
+    cursor: pointer;
+    display: flex;
+  }
+.navbar-collapse ul.active {
+  display: none;
+}
+}
 nav #logo {
   margin-top: 1rem; 
 }
@@ -69,6 +94,13 @@ nav .navbar-nav .nav-item  {
   font-size: 1.7rem;
   position: relative;
   cursor: pointer;
+}
+@media (max-width:973px) {
+  nav .navbar-nav .nav-item  {
+    font-size: 2.4rem;
+    position: relative;
+    cursor: pointer;
+  }
 }
 nav .navbar-nav .nav-item::before {
   content: "";
@@ -105,10 +137,17 @@ label #cancel {
 #check {
   display: none;
 }
-.fa-3x {
-  font-size: 1em;
+.fas{
+  font-size: 3em;
   margin-top: 1.5rem;
   padding: 1rem;
+}
+@media (max-width:973px) {
+  .fas{
+    font-size: 2em;
+    margin-top: 1.5rem;
+    padding: 1rem;
+  }
 }
 /* ///////////////// */
 @media (max-width: 900px) {
@@ -127,10 +166,9 @@ label #cancel {
   nav ul {
     position: fixed;
     width: 100%;
-    height: 100vh;
     top: 50px;
-    left: -100%;
-    background-color: #274768;
+    left: 0%;
+    background-color: #ee4248;
     text-align: center;
     transition: all .5s;
     padding: 0px 0;
